fix color contrast

--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -34,7 +34,7 @@
 
 .gray {
 	color: var(--white);
-	background-color: #B3C0D9;
+	background-color: #8A99B7;
 
 	font-weight: bold;
 }
